--- a/css/Style.css
+++ b/css/Style.css
@@ -1,6 +1,12 @@
-.contenedor{
+
+/*div,article,section,.container,table, th,nav,header,footer{
+	border:1px solid cyan;
+}*/
+
+.contenedor {
+	max-width: 1200px;
 	margin: auto;
-	max-width: 1000px;	
+	box-sizing: border-box;
 }
 
 nav{
@@ -17,7 +23,7 @@ nav ul li{
 
 .menu-izquierda li{
 	display: inline-block;
-	font-family: arial, helvetica, sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-weight: bold;	
 	position: relative;	
 }
@@ -32,115 +38,235 @@ nav ul li{
 	position: absolute;	
 }
 
-.buscador{
-	padding-left: 400px;	
+.banner img{
+	width:100%;
+	height:auto;
+	z-index: 1;
+	position: relative;
 }
 
-input[type="text"]{
-	width: 600px;
-	height: 40px;
-	padding: 10px;
+
+.buscador {
+    width: 60%;
+    margin:-30px auto;
+    box-sizing: border-box; 
+    z-index: 2;
+    position: relative;
 }
 
-.boton1{
-	width:150px;
-    height:64px;
+.buscador input {
+    width: 75%;
+    height: 50px;    
+    float: left;
     border: 0;
+    background: #eee;
+    border-radius: 3px 0 0 3px;
+    padding: 0px 20px;
+    box-sizing: border-box;
+
+}
+
+.buscador button {    
+    width: 25%; 
+    height: 50px;
+    float: right;
+    border: 0; 
     font-size:10px;
-    font-family:arial, helvetica, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-weight:bold;
-    color:white;
-    background:#638cb5;     
+    color: #fff;
+    background: #438cdb;
+    border-radius: 0 3px 3px 0;    
+}  
+
+.buscador button:hover{
+    background: #2672e0;
 }
 
 .interes{
-	padding-left: 250px;
+	margin-top: 100px;
 }
 .interes article{
-	width: 20%;
+	width: calc(95%/4);
 	display: inline-block;	
-	padding: 100px 50px;
+	padding: 100px 0px;
 	box-sizing: border-box;
 	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+
+}
+
+.iconos img:hover{
+	transition-duration: 1.3s;
+	transition-timing-function: ease-in-out;
+	transform: scale(1.25);	
 }
 
 .interes2{
-	margin-left: 150px;
+	margin-top: 50px;
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;	
+
+}
+
+p{
+	font-weight: lighter;
+}
+
+.interes2 ul li{
+	display: inline-block;
+	list-style: none;
+	margin-bottom: 15px;		
 }
 
 .interes2 h2, .interes2 h4{
 	text-align: center;	
 }
 
-.interes2 ul{
+.celular{
+	width: 30%;
 	display: inline-block;
-	list-style: none;
-	text-align: center;
+	position: relative;
+	z-index: 2;
 }
 
-.interes3 article{
-	display: inline-block;
+.lista1{
+	width: 30%;
+	float:left;
+	text-align: right;	
 }
 
-.interes3 ul li{
-	list-style: none;
-	display: inline-block;
-	margin: 50px;	
+.lista1,.celular,.lista2{
+	margin-top: 80px;
+}
+
+.lista2{
+	width:30%;
+	float: right;
 }
 
 .interes3 {
 	text-align: center;
-	margin-top: 100px;
+	margin-top: -5%;
+}
+
+.banner2 img{
+	width: 100%;
+	position: relative;
+	z-index: 1;	
+}
+
+.interes3 ul li{
+	list-style: none;
+	display: inline-block;	
+}
+
+.paquete li article{
+	width: 200px;
+	height: 400px;	
+	box-sizing: border-box;
+	padding: 40px 5px 5px 5px;
+	margin: 10px;
+	border: #F0EFEF 1px solid;	
+}
+
+.paquete li article h3{
+	margin-bottom: 15%;
+}
+
+.paquete li article p {
+	margin-bottom: 15%;
+}
+
+.paquete li article table tr td{
+	height: 40px;
+	width:200px;
+}
+
+.paquete li article h4 span{
+	font-size: 30px;
+}
+
+.paquete li article h3{
+	font-family: 'Raleway', sans-serif;
+	font-weight: bold;
+}
+
+.precio1 tr td:last-child{
+	color: cyan;
+}
+
+.precio2 tr td:last-child{
+	color:#FFB92F;
+}
+
+.precio3 tr td:last-child{
+	color:#FF7739;
+}
+
+.precio4 tr td:last-child{
+	color:#FF0500;
+}
+
+h4{	
+	height: 30px;
+	width: 100%;
+	font-size: 15px;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: bold;
+	
 }
 
 .boton2{
-	width: 180px;
+	width: 100%;
 	height: 40px;
 	background: #00BFFF;
 	border-radius: 5px;
 	border: none;
 	color: white;
-	font-family: arial, helvetica, sans-serif;
-	font-weight: bold;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: bold;	
+}
+
+.boton2:hover{
+	background: #2672e0;
 }
 
 .relleno{
-	width: auto;
-	height: 150px;
+	width: 100%;
+	box-sizing: border-box;
 	background:#00223b;
 	color: white; 
+	text-align: center;
+	padding: 5% 0;
 }
 
 .relleno h3{
 	display: inline-block;
-	padding-left: 500px;
-	padding-top: 2em;
 	font-family: 'Raleway', sans-serif;
 }
 
 .relleno h3 span{
 	color:#00BFFF;
 	font-size: 30px;
-	font-family: arial, helvetica, sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
 
-footer{
-	width: auto;
-	height: 80px;
-	background: #001321;
-	padding-left: 30px;
-	padding-right: 30px;
+footer {
+	width: 100%;
+	background: #001321;	
+	font-family: 'Open Sans', sans-serif;
+	color: white;
+	font-size: 12px;
+	display: inline-block;
+	padding:1% 0;
+
 }
 
 footer p{
 	color: white;
 	display: inline-block;
-}
-
-.almenu li span{
-	color: white;
-	font-size: 12px;	
-	font-family:arial, helvetica, sans-serif; 
+	margin-left: 10px;
 }
 
 .almenu{
@@ -156,4 +282,8 @@ span{
 	display: inline-block;
 	text-align: center;
 	box-sizing:border-box;	
+}
+
+.almenu li a span{
+	color: white;
 }
