--- a/css/Style.css
+++ b/css/Style.css
@@ -1,289 +1,347 @@
-
 /*div,article,section,.container,table, th,nav,header,footer{
 	border:1px solid cyan;
 }*/
+@import "https://fonts.googleapis.com/css?family=Open+Sans|Raleway";
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
 
 .contenedor {
-	max-width: 1200px;
-	margin: auto;
-	box-sizing: border-box;
-}
+  max-width: 1200px;
+  margin: auto;
+  box-sizing: border-box; }
 
-nav{
-	padding: 30px 0;	
-}
+nav {
+  padding: 40px 0; }
+  nav ul li {
+    margin: 10px 10px; }
 
-nav ul li{
-	margin: 0 10px;
-}
+.menu-izquierda {
+  float: right; }
+  .menu-izquierda li {
+    display: inline-block;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    position: relative; }
 
-.menu-izquierda{
-	float: right;	
-}
+.contenedor ul li a {
+  text-decoration: none;
+  color: black;
+  font-size: 15px; }
 
-.menu-izquierda li{
-	display: inline-block;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: bold;	
-	position: relative;	
-}
+.logo {
+  display: inline-block;
+  position: absolute; }
 
-.contenedor ul li a{
-	text-decoration: none;
-	color: black;
-	font-size: 15px;
-}
-.logo{
-	display: inline-block;
-	position: absolute;	
-}
+.banner img {
+  width: 100%;
+  height: auto;
+  z-index: 1;
+  position: relative; }
 
-.banner img{
-	width:100%;
-	height:auto;
-	z-index: 1;
-	position: relative;
-}
+.text_encima1 {
+  margin-top: 10.5%;
+  margin-left: 25%;
+  font-size: 40px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  text-transform: capitalize;
+  color: #fff;
+  position: absolute;
+  z-index: 2; }
 
+.text_encima2 {
+  width: 25%;
+  margin-top: 15%;
+  margin-left: 25%;
+  font-size: 15px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  color: #fff;
+  text-align: left;
+  position: absolute;
+  z-index: 2; }
 
 .buscador {
-    width: 60%;
-    margin:-30px auto;
-    box-sizing: border-box; 
-    z-index: 2;
-    position: relative;
-}
-
-.buscador input {
+  width: 60%;
+  margin: -30px auto;
+  box-sizing: border-box;
+  z-index: 2;
+  position: relative; }
+  .buscador input {
     width: 75%;
-    height: 50px;    
+    height: 50px;
     float: left;
     border: 0;
     background: #eee;
     border-radius: 3px 0 0 3px;
     padding: 0px 20px;
-    box-sizing: border-box;
-
-}
-
-.buscador button {    
-    width: 25%; 
+    box-sizing: border-box; }
+  .buscador button {
+    width: 25%;
     height: 50px;
     float: right;
-    border: 0; 
-    font-size:10px;
+    border: 0;
+    font-size: 10px;
     font-family: 'Open Sans', sans-serif;
-    font-weight:bold;
+    font-weight: bold;
     color: #fff;
     background: #438cdb;
-    border-radius: 0 3px 3px 0;    
-}  
+    border-radius: 0 3px 3px 0; }
 
-.buscador button:hover{
-    background: #2672e0;
-}
+.buscador button:hover {
+  background: #2672e0; }
 
-.interes{
-	margin-top: 100px;
-}
-.interes article{
-	width: calc(95%/4);
-	display: inline-block;	
-	padding: 100px 0px;
-	box-sizing: border-box;
-	text-align: center;
-	font-family: 'Open Sans', sans-serif;
+.interes {
+  margin-top: 5%; }
+  .interes table tr td {
+    width: calc(95%/7);
+    padding: 5% 0px;
+    box-sizing: border-box;
+    text-align: center;
+    font-family: 'Open Sans', sans-serif; }
+    .interes table tr td span img {
+      position: relative;
+      bottom: 55px; }
 
-}
+.iconos img, .iconos h6, .iconos p {
+  padding: 5% 0; }
 
-.iconos img:hover{
-	transition-duration: 1.3s;
-	transition-timing-function: ease-in-out;
-	transform: scale(1.25);	
-}
+.iconos img:hover {
+  transition-duration: 1.3s;
+  transition-timing-function: ease-in-out;
+  transform: scale(1.25); }
 
-.interes2{
-	margin-top: 50px;
-	text-align: center;
-	font-family: 'Open Sans', sans-serif;	
+.interes2 {
+  margin-top: 50px;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif; }
+  .interes2 ul li {
+    display: inline-block;
+    list-style: none;
+    margin-bottom: 15px; }
 
-}
+.lista1 {
+  width: 30%;
+  float: left;
+  text-align: right;
+  padding-left: 5%;
+  margin-top: 5%; }
+  .lista1 ul li table tr th img {
+    position: relative;
+    top: 20px;
+    padding: 0 10px; }
 
-p{
-	font-weight: lighter;
-}
+.lista2 {
+  width: 30%;
+  float: right;
+  text-align: left;
+  padding-right: 5%;
+  margin-top: 5%; }
+  .lista2 ul li table tr th img {
+    position: relative;
+    top: 20px;
+    padding: 0 10px; }
 
-.interes2 ul li{
-	display: inline-block;
-	list-style: none;
-	margin-bottom: 15px;		
-}
+.celular {
+  width: 30%;
+  display: inline-block;
+  position: relative;
+  z-index: 2;
+  margin-top: 5%; }
 
-.interes2 h2, .interes2 h4{
-	text-align: center;	
-}
+.tabla1 h4 {
+  text-align: right; }
 
-.celular{
-	width: 30%;
-	display: inline-block;
-	position: relative;
-	z-index: 2;
-}
-
-.lista1{
-	width: 30%;
-	float:left;
-	text-align: right;	
-}
-
-.lista1,.celular,.lista2{
-	margin-top: 80px;
-}
-
-.lista2{
-	width:30%;
-	float: right;
-}
+.tabla2 h4 {
+  text-align: left; }
 
 .interes3 {
-	text-align: center;
-	margin-top: -5%;
-}
+  text-align: center;
+  margin-top: -5%;
+  max-width: 2000px;
+  max-height: 1000px; }
+  .interes3 ul li {
+    list-style: none;
+    display: inline-block; }
 
-.banner2 img{
-	width: 100%;
-	position: relative;
-	z-index: 1;	
-}
+.banner2 img {
+  width: 100%; }
 
-.interes3 ul li{
-	list-style: none;
-	display: inline-block;	
-}
+.text_encima3, .text_encima4, .text_encima5 {
+  position: absolute; }
 
-.paquete li article{
-	width: 200px;
-	height: 400px;	
-	box-sizing: border-box;
-	padding: 40px 5px 5px 5px;
-	margin: 10px;
-	border: #F0EFEF 1px solid;	
-}
+.text_encima3 {
+  margin-top: 7.5%;
+  margin-left: 48.8%; }
 
-.paquete li article h3{
-	margin-bottom: 15%;
-}
+.text_encima4 {
+  margin: 10% 25% 20% 39%;
+  font-size: 50px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold; }
 
-.paquete li article p {
-	margin-bottom: 15%;
-}
+.text_encima5 {
+  margin: 15% 25% 10% 30%;
+  font-size: 20px;
+  font-family: 'Raleway', sans-serif;
+  color: #ABB0FF; }
 
-.paquete li article table tr td{
-	height: 40px;
-	width:200px;
-}
+.combo {
+  margin-top: -11%; }
+  .combo li article {
+    width: 250px;
+    height: 400px;
+    box-sizing: border-box;
+    padding: 40px 15px 20px 15px;
+    margin: 10px;
+    border: #F0EFEF 1px solid;
+    background: #fff; }
+    .combo li article p {
+      color: black;
+      margin-bottom: 15%; }
+    .combo li article h3 {
+      margin-bottom: 15%;
+      font-family: 'Raleway', sans-serif;
+      font-weight: bold; }
+    .combo li article table tr td {
+      height: 40px;
+      width: 5%;
+      text-align: left;
+      padding-left: 15%; }
+    .combo li article h4 span {
+      font-size: 30px; }
 
-.paquete li article h4 span{
-	font-size: 30px;
-}
+.precio1 tr td:last-child {
+  color: cyan; }
 
-.paquete li article h3{
-	font-family: 'Raleway', sans-serif;
-	font-weight: bold;
-}
+.precio2 tr td:last-child {
+  color: #FFB92F; }
 
-.precio1 tr td:last-child{
-	color: cyan;
-}
+.precio3 tr td:last-child {
+  color: #FF7739; }
 
-.precio2 tr td:last-child{
-	color:#FFB92F;
-}
+.precio4 tr td:last-child {
+  color: #FF0500; }
 
-.precio3 tr td:last-child{
-	color:#FF7739;
-}
+.boton2 {
+  width: 85%;
+  height: 40px;
+  background: #00BFFF;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold; }
 
-.precio4 tr td:last-child{
-	color:#FF0500;
-}
+.boton2:hover {
+  background: #2672e0; }
 
-h4{	
-	height: 30px;
-	width: 100%;
-	font-size: 15px;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: bold;
-	
-}
-
-.boton2{
-	width: 100%;
-	height: 40px;
-	background: #00BFFF;
-	border-radius: 5px;
-	border: none;
-	color: white;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: bold;	
-}
-
-.boton2:hover{
-	background: #2672e0;
-}
-
-.relleno{
-	width: 100%;
-	box-sizing: border-box;
-	background:#00223b;
-	color: white; 
-	text-align: center;
-	padding: 5% 0;
-}
-
-.relleno h3{
-	display: inline-block;
-	font-family: 'Raleway', sans-serif;
-}
-
-.relleno h3 span{
-	color:#00BFFF;
-	font-size: 30px;
-	font-family: 'Open Sans', sans-serif;
-}
+.relleno {
+  width: 100%;
+  box-sizing: border-box;
+  background: #00223b;
+  color: white;
+  text-align: center;
+  padding: 5% 0;
+  margin-top: 50px; }
+  .relleno h3 {
+    display: inline-block;
+    font-family: 'Raleway', sans-serif; }
+    .relleno h3 span {
+      color: #00BFFF;
+      font-size: 30px;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: bold; }
 
 footer {
-	width: 100%;
-	background: #001321;	
-	font-family: 'Open Sans', sans-serif;
-	color: white;
-	font-size: 12px;
-	display: inline-block;
-	padding:1% 0;
+  width: 100%;
+  background: #001321;
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+  font-size: 12px;
+  display: inline-block;
+  padding: 1% 0; }
+  footer p {
+    color: white;
+    display: inline-block;
+    margin-left: 10px; }
 
-}
+.almenu {
+  float: right; }
+  .almenu li {
+    display: inline-block;
+    margin: 0 10px; }
+    .almenu li a span {
+      color: #fff; }
 
-footer p{
-	color: white;
-	display: inline-block;
-	margin-left: 10px;
-}
+span {
+  display: inline-block;
+  text-align: center;
+  box-sizing: border-box; }
 
-.almenu{
-	float: right;
-}
+h2 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 35px;
+  font-weight: bold;
+  text-transform: capitalize;
+  margin: 2% 0; }
 
-.almenu li{
-	display: inline-block;
-	margin: 0 10px;
-}
+h4 {
+  height: 30px;
+  width: 100%;
+  font-size: 15px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold; }
 
-span{
-	display: inline-block;
-	text-align: center;
-	box-sizing:border-box;	
-}
+h6 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase; }
 
-.almenu li a span{
-	color: white;
-}
+p {
+  line-height: 27px;
+  font-weight: lighter;
+  color: #ABB0FF; }
+
+/*# sourceMappingURL=style.css.map */
