--- a/css/Style.css
+++ b/css/Style.css
@@ -47,30 +47,27 @@ table {
 
 .contenedor {
   max-width: 1200px;
-  margin: auto;
-  box-sizing: border-box; }
+  margin: auto; }
 
 nav {
   padding: 40px 0; }
   nav ul li {
     margin: 10px 10px; }
 
-.menu-izquierda {
-  float: right; }
-  .menu-izquierda li {
-    display: inline-block;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: bold;
-    position: relative; }
-
-.contenedor ul li a {
+.menu ul li a {
   text-decoration: none;
   color: black;
   font-size: 15px; }
-
-.logo {
+.menu .logo {
   display: inline-block;
   position: absolute; }
+.menu .menu-izquierda {
+  float: right; }
+.menu li {
+  display: inline-block;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+  position: relative; }
 
 .banner img {
   width: 100%;
@@ -82,7 +79,7 @@ nav {
   margin-top: 10.5%;
   margin-left: 25%;
   font-size: 40px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: bold;
   text-transform: capitalize;
   color: #fff;
@@ -94,7 +91,7 @@ nav {
   margin-top: 15%;
   margin-left: 25%;
   font-size: 15px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: bold;
   color: #fff;
   text-align: left;
@@ -102,14 +99,14 @@ nav {
   z-index: 2; }
 
 .buscador {
-  width: 60%;
+  width: 800px;
   margin: -30px auto;
   box-sizing: border-box;
   z-index: 2;
   position: relative; }
   .buscador input {
-    width: 75%;
-    height: 50px;
+    width: 80%;
+    height: 60px;
     float: left;
     border: 0;
     background: #eee;
@@ -117,28 +114,36 @@ nav {
     padding: 0px 20px;
     box-sizing: border-box; }
   .buscador button {
-    width: 25%;
-    height: 50px;
+    width: 20%;
+    height: 60px;
     float: right;
     border: 0;
     font-size: 10px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-weight: bold;
     color: #fff;
-    background: #438cdb;
+    background: #00BFFF;
     border-radius: 0 3px 3px 0; }
-
-.buscador button:hover {
-  background: #2672e0; }
+    .buscador button:hover {
+      background: #004c66;
+      transition-duration: 1s; }
+    .buscador button span {
+      padding-right: 10px; }
+  @media screen and (max-width: 600px) {
+    .buscador {
+      width: 400px; } }
+  @media screen and (max-width: 320px) {
+    .buscador {
+      width: 50px; } }
 
 .interes {
   margin-top: 5%; }
   .interes table tr td {
-    width: calc(95%/7);
+    width: calc(100%/7);
     padding: 5% 0px;
     box-sizing: border-box;
     text-align: center;
-    font-family: 'Open Sans', sans-serif; }
+    font-family: "Open Sans", sans-serif; }
     .interes table tr td span img {
       position: relative;
       bottom: 55px; }
@@ -154,7 +159,7 @@ nav {
 .interes2 {
   margin-top: 50px;
   text-align: center;
-  font-family: 'Open Sans', sans-serif; }
+  font-family: "Open Sans", sans-serif; }
   .interes2 ul li {
     display: inline-block;
     list-style: none;
@@ -198,8 +203,8 @@ nav {
 .interes3 {
   text-align: center;
   margin-top: -5%;
-  max-width: 2000px;
-  max-height: 1000px; }
+  width: 100%;
+  max-height: 800px; }
   .interes3 ul li {
     list-style: none;
     display: inline-block; }
@@ -217,13 +222,13 @@ nav {
 .text_encima4 {
   margin: 10% 25% 20% 39%;
   font-size: 50px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: bold; }
 
 .text_encima5 {
   margin: 15% 25% 10% 30%;
   font-size: 20px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   color: #ABB0FF; }
 
 .combo {
@@ -235,21 +240,26 @@ nav {
     padding: 40px 15px 20px 15px;
     margin: 10px;
     border: #F0EFEF 1px solid;
-    background: #fff; }
+    background: #fff;
+    font-family: "Raleway", sans-serif;
+    font-weight: bold; }
     .combo li article p {
       color: black;
       margin-bottom: 15%; }
     .combo li article h3 {
-      margin-bottom: 15%;
-      font-family: 'Raleway', sans-serif;
-      font-weight: bold; }
+      margin-bottom: 15%; }
     .combo li article table tr td {
       height: 40px;
       width: 5%;
       text-align: left;
       padding-left: 15%; }
     .combo li article h4 span {
-      font-size: 30px; }
+      font-size: 30px;
+      font-weight: bold;
+      vertical-align: sub; }
+      .combo li article h4 span:first-child, .combo li article h4 span:nth-child(3) {
+        vertical-align: super;
+        font-size: 15px; }
 
 .precio1 tr td:last-child {
   color: cyan; }
@@ -270,11 +280,11 @@ nav {
   border-radius: 5px;
   border: none;
   color: white;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: bold; }
-
-.boton2:hover {
-  background: #2672e0; }
+  .boton2:hover {
+    background: #004c66;
+    transition-duration: 1s; }
 
 .relleno {
   width: 100%;
@@ -286,41 +296,41 @@ nav {
   margin-top: 50px; }
   .relleno h3 {
     display: inline-block;
-    font-family: 'Raleway', sans-serif; }
+    font-family: "Raleway", sans-serif; }
     .relleno h3 span {
       color: #00BFFF;
       font-size: 30px;
-      font-family: 'Open Sans', sans-serif;
+      font-family: "Open Sans", sans-serif;
       font-weight: bold; }
 
 footer {
   width: 100%;
   background: #001321;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: white;
   font-size: 12px;
   display: inline-block;
-  padding: 1% 0; }
+  padding: 20px 0; }
   footer p {
     color: white;
     display: inline-block;
     margin-left: 10px; }
 
 .almenu {
-  float: right; }
+  float: right;
+  padding: 10px 0; }
   .almenu li {
     display: inline-block;
     margin: 0 10px; }
-    .almenu li a span {
-      color: #fff; }
-
-span {
-  display: inline-block;
-  text-align: center;
-  box-sizing: border-box; }
+    .almenu li a {
+      color: #fff;
+      display: inline-block;
+      text-align: center;
+      box-sizing: border-box;
+      text-decoration: none; }
 
 h2 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 35px;
   font-weight: bold;
   text-transform: capitalize;
@@ -330,11 +340,11 @@ h4 {
   height: 30px;
   width: 100%;
   font-size: 15px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: bold; }
 
 h6 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 18px;
   font-weight: bold;
   text-transform: uppercase; }
