--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,10 +5,13 @@
 @import "reset";
 @import 'https://fonts.googleapis.com/css?family=Open+Sans|Raleway';
 
+$t-letra1: 'Open Sans', sans-serif;
+$t-letra2: 'Raleway', sans-serif;
+$c-boton: #00BFFF;
+
 .contenedor {
 	max-width: 1200px;
 	margin: auto;
-	box-sizing: border-box;
 }
 
 nav{
@@ -20,31 +23,30 @@ nav{
 	}	
 }
 
-.menu-izquierda{
-	float: right;
-	li{
-		display: inline-block;
-		font-family: 'Open Sans', sans-serif;
-		font-weight: bold;	
-		position: relative;	
-	}	
-}
-
-.contenedor{
+.menu{
 	ul {
 		li{
 			a{
 				text-decoration: none;
-				color: black;
+				color: ;
 				font-size: 15px;
 			}
 		}
 	}
-}
-
-.logo{
+	.logo{
 	display: inline-block;
 	position: absolute;	
+	}
+	.menu-izquierda{
+		float: right;
+		}
+		li{
+			display: inline-block;
+			font-family: $t-letra1;
+			font-weight: bold;	
+			position: relative;			
+		}
+	}	
 }
 
 .banner{
@@ -56,11 +58,9 @@ nav{
 	}
 }
 
-.text_encima1{
-	margin-top: 10.5%;
-	margin-left: 25%;
+.text_encima1{	
 	font-size: 40px;
-	font-family: 'Raleway', sans-serif;
+	font-family: $t-letra2;
 	font-weight: bold;
 	text-transform: capitalize;
 	color: #fff;
@@ -69,11 +69,9 @@ nav{
 }
 
 .text_encima2{
-	width: 25%;
-	margin-top: 15%;
-	margin-left: 25%;
+	width: 25%;	
 	font-size: 15px;
-	font-family: 'Raleway', sans-serif;
+	font-family: $t-letra2;
 	font-weight: bold;
 	color: #fff;
 	text-align: left;
@@ -83,14 +81,14 @@ nav{
 
 
 .buscador {
-    width: 60%;
+    width: 800px;
     margin:-30px auto;
     box-sizing: border-box; 
     z-index: 2;
     position: relative;
     input{
-    	width: 75%;
-	    height: 50px;    
+    	width: 80%;
+	    height: 60px;    
 	    float: left;
 	    border: 0;
 	    background: #eee;
@@ -99,23 +97,30 @@ nav{
 	    box-sizing: border-box;
     }
     button{
-	  	width: 25%; 
-	    height: 50px;
+	  	width: 20%; 
+	    height: 60px;
 	    float: right;
 	    border: 0; 
 	    font-size:10px;
-	    font-family: 'Open Sans', sans-serif;
+	    font-family: $t-letra1;
 	    font-weight:bold;
 	    color: #fff;
-	    background: #438cdb;
-	    border-radius: 0 3px 3px 0; 
-	    }
-}
-
-.buscador{
-	button:hover{
-    	background: #2672e0;
-    }
+	    background: $c-boton;
+	    border-radius: 0 3px 3px 0;
+	    &:hover{
+    		background: darken($c-boton, 30%);
+    		transition-duration: 1s;
+   		}
+	    span{
+	    	padding-right:10px;
+	    }	    
+	}
+	@media screen and(max-width:600px){
+		width:400px;
+	}
+	@media screen and(max-width:320px){
+		width:50px;
+	}
 }
 
 .interes{
@@ -123,11 +128,11 @@ nav{
 	table{
 		tr{
 			td{
-				width: calc(95%/7);
+				width: calc(100%/7);
 				padding: 5% 0px;
 				box-sizing: border-box;
 				text-align: center;
-				font-family: 'Open Sans', sans-serif;
+				font-family: $t-letra1;
 				span{
 					img{
 						position: relative;
@@ -152,7 +157,7 @@ nav{
 .interes2{
 	margin-top: 50px;
 	text-align: center;
-	font-family: 'Open Sans', sans-serif;
+	font-family: $t-letra1;
 	ul{
 		li{
 			display: inline-block;
@@ -227,8 +232,8 @@ nav{
 .interes3 {
 	text-align: center;
 	margin-top: -5%;
-	max-width: 2000px;
-	max-height: 1000px;
+	width: 100%;
+	max-height: 800px;
 	ul{
 		li{
 			list-style: none;
@@ -253,14 +258,14 @@ nav{
 .text_encima4{
 	margin:10% 25% 20% 39%;
 	font-size: 50px;
-	font-family: 'Raleway', sans-serif;
+	font-family: $t-letra2;
 	font-weight: bold;
 }
 
 .text_encima5{
 	margin:15% 25% 10% 30%;
 	font-size: 20px;
-	font-family: 'Raleway', sans-serif;
+	font-family: $t-letra2;
 	color:#ABB0FF;
 }
 
@@ -277,14 +282,14 @@ nav{
 			margin: 10px;
 			border: #F0EFEF 1px solid;	
 			background:#fff;
+			font-family: $t-letra2;
+			font-weight: bold;
 			p{
 				color: black;
 				margin-bottom: 15%;
 			}
 			h3{
-				margin-bottom: 15%;
-				font-family: 'Raleway', sans-serif;
-				font-weight: bold;
+				margin-bottom: 15%;				
 			}
 			table{
 				tr{
@@ -299,6 +304,12 @@ nav{
 			h4{
 				span{
 					font-size: 30px;
+					font-weight: bold;
+					vertical-align: sub;
+					&:first-child, &:nth-child(3){
+						vertical-align: super;
+						font-size: 15px;
+					}
 				}
 			}
 		}
@@ -340,16 +351,16 @@ nav{
 .boton2{
 	width: 85%;
 	height: 40px;
-	background: #00BFFF;
+	background: $c-boton;
 	border-radius: 5px;
 	border: none;
 	color: white;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: bold;	
-}
-
-.boton2:hover{
-	background: #2672e0;
+	font-family: $t-letra1;
+	font-weight: bold;
+	&:hover{
+		background: darken($c-boton, 30%);
+		transition-duration: 1s;
+	}	
 }
 
 .relleno{
@@ -362,11 +373,11 @@ nav{
 	margin-top: 50px;
 	h3{
 		display: inline-block;
-		font-family: 'Raleway', sans-serif;
+		font-family: $t-letra2;
 		span{
 			color:#00BFFF;
 			font-size: 30px;
-			font-family: 'Open Sans', sans-serif;
+			font-family: $t-letra1;
 			font-weight: bold;
 		}
 	}
@@ -375,11 +386,11 @@ nav{
 footer {
 	width: 100%;
 	background: #001321;	
-	font-family: 'Open Sans', sans-serif;
+	font-family: $t-letra1;
 	color: white;
 	font-size: 12px;
 	display: inline-block;
-	padding:1% 0;
+	padding:20px 0;
 	p{
 		color: white;
 		display: inline-block;
@@ -389,27 +400,22 @@ footer {
 
 .almenu{
 	float: right;
+	padding:10px 0;
 	li{
 		display: inline-block;
 		margin: 0 10px;
 		a{
-			span{
-				color: #fff;
-			}
+			color: #fff;
+			display: inline-block;
+			text-align: center;
+			box-sizing:border-box;
+			text-decoration: none;			
 		}
 	}
 }
 
-span{
-	display: inline-block;
-	text-align: center;
-	box-sizing:border-box;	
-}
-
-
-
 h2{
-	font-family: 'Open Sans', sans-serif;
+	font-family: $t-letra1;
 	font-size: 35px;
 	font-weight: bold;
 	text-transform: capitalize;
@@ -420,12 +426,12 @@ h4{
 	height: 30px;
 	width: 100%;
 	font-size: 15px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: $t-letra1;
 	font-weight: bold;	
 }
 
 h6{
-	font-family: 'Open Sans', sans-serif;
+	font-family: $t-letra1;
 	font-size: 18px;
 	font-weight: bold;
 	text-transform: uppercase;
