--- a/css/Style.css
+++ b/css/Style.css
@@ -56,47 +56,48 @@ nav {
 
 .menu ul li a {
   text-decoration: none;
-  color: black;
+  color: #c1c2c7;
   font-size: 15px; }
+  .menu ul li a:hover {
+    color: #292a2d; }
 .menu .logo {
   display: inline-block;
   position: absolute; }
 .menu .menu-izquierda {
   float: right; }
-.menu li {
-  display: inline-block;
-  font-family: "Open Sans", sans-serif;
-  font-weight: bold;
-  position: relative; }
+  .menu .menu-izquierda li {
+    display: inline-block;
+    font-family: "Open Sans", sans-serif;
+    font-weight: bold;
+    position: relative; }
 
-.banner img {
+.banner .text_encima1 {
   width: 100%;
-  height: auto;
-  z-index: 1;
-  position: relative; }
-
-.text_encima1 {
-  margin-top: 10.5%;
-  margin-left: 25%;
-  font-size: 40px;
+  font-size: 45px;
   font-family: "Raleway", sans-serif;
   font-weight: bold;
   text-transform: capitalize;
   color: #fff;
   position: absolute;
-  z-index: 2; }
-
-.text_encima2 {
+  z-index: 2;
+  text-align: left;
+  margin: 10% 0 0 13%; }
+.banner .text_encima2 {
   width: 25%;
-  margin-top: 15%;
-  margin-left: 25%;
   font-size: 15px;
   font-family: "Raleway", sans-serif;
   font-weight: bold;
   color: #fff;
   text-align: left;
   position: absolute;
-  z-index: 2; }
+  z-index: 2;
+  margin: 15% 0 0 13%;
+  line-height: 30px; }
+.banner img {
+  width: 100%;
+  height: auto;
+  z-index: 1;
+  position: relative; }
 
 .buscador {
   width: 800px;
@@ -129,12 +130,6 @@ nav {
       transition-duration: 1s; }
     .buscador button span {
       padding-right: 10px; }
-  @media screen and (max-width: 600px) {
-    .buscador {
-      width: 400px; } }
-  @media screen and (max-width: 320px) {
-    .buscador {
-      width: 50px; } }
 
 .interes {
   margin-top: 5%; }
@@ -255,8 +250,7 @@ nav {
       padding-left: 15%; }
     .combo li article h4 span {
       font-size: 30px;
-      font-weight: bold;
-      vertical-align: sub; }
+      font-weight: bold; }
       .combo li article h4 span:first-child, .combo li article h4 span:nth-child(3) {
         vertical-align: super;
         font-size: 15px; }
@@ -312,22 +306,21 @@ footer {
   display: inline-block;
   padding: 20px 0; }
   footer p {
-    color: white;
+    color: #90909c;
     display: inline-block;
     margin-left: 10px; }
-
-.almenu {
-  float: right;
-  padding: 10px 0; }
-  .almenu li {
-    display: inline-block;
-    margin: 0 10px; }
-    .almenu li a {
-      color: #fff;
+  footer .almenu {
+    float: right;
+    padding: 10px 0; }
+    footer .almenu li {
       display: inline-block;
-      text-align: center;
-      box-sizing: border-box;
-      text-decoration: none; }
+      margin: 0 10px; }
+      footer .almenu li a {
+        color: #90909c;
+        display: inline-block;
+        text-align: center;
+        box-sizing: border-box;
+        text-decoration: none; }
 
 h2 {
   font-family: "Open Sans", sans-serif;
