--- a/css/Style.css
+++ b/css/Style.css
@@ -238,34 +238,40 @@ nav {
     background: #fff;
     font-family: "Raleway", sans-serif;
     font-weight: bold; }
-    .combo li article p {
-      color: black;
-      margin-bottom: 15%; }
     .combo li article h3 {
       margin-bottom: 15%; }
-    .combo li article table tr td {
-      height: 40px;
-      width: 5%;
-      text-align: left;
-      padding-left: 15%; }
     .combo li article h4 span {
       font-size: 30px;
       font-weight: bold; }
       .combo li article h4 span:first-child, .combo li article h4 span:nth-child(3) {
         vertical-align: super;
         font-size: 15px; }
+    .combo li article p {
+      color: #4e4f51;
+      margin-bottom: 15%; }
+    .combo li article table tr td {
+      height: 40px;
+      width: 5%;
+      text-align: left;
+      padding-left: 15%;
+      font-weight: normal;
+      color: #4e4f51; }
 
 .precio1 tr td:last-child {
-  color: cyan; }
+  color: cyan;
+  font-weight: bold; }
 
 .precio2 tr td:last-child {
-  color: #FFB92F; }
+  color: #FFB92F;
+  font-weight: bold; }
 
 .precio3 tr td:last-child {
-  color: #FF7739; }
+  color: #FF7739;
+  font-weight: bold; }
 
 .precio4 tr td:last-child {
-  color: #FF0500; }
+  color: #FF0500;
+  font-weight: bold; }
 
 .boton2 {
   width: 85%;
@@ -283,7 +289,7 @@ nav {
 .relleno {
   width: 100%;
   box-sizing: border-box;
-  background: #00223b;
+  background: #142e3f;
   color: white;
   text-align: center;
   padding: 5% 0;
@@ -299,7 +305,7 @@ nav {
 
 footer {
   width: 100%;
-  background: #001321;
+  background: #091722;
   font-family: "Open Sans", sans-serif;
   color: white;
   font-size: 12px;
