--- a/sass/style.scss
+++ b/sass/style.scss
@@ -283,22 +283,8 @@ nav{
 			background:#fff;
 			font-family: $t-letra2;
 			font-weight: bold;
-			p{
-				color: black;
-				margin-bottom: 15%;
-			}
 			h3{
 				margin-bottom: 15%;				
-			}
-			table{
-				tr{
-					td{
-						height: 40px;
-						width:5%;
-						text-align: left;
-						padding-left: 15%;
-					}
-				}
 			}
 			h4{
 				span{
@@ -311,6 +297,24 @@ nav{
 					}
 				}
 			}
+			p{
+				color: #4e4f51;
+				margin-bottom: 15%;
+			}
+			
+			table{
+				tr{
+					td{
+						height: 40px;
+						width:5%;
+						text-align: left;
+						padding-left: 15%;
+						font-weight: normal;
+						color: #4e4f51;
+					}
+				}
+			}
+			
 		}
 	}
 }
@@ -319,6 +323,7 @@ nav{
 	tr{
 		td:last-child{
 			color: cyan;
+			font-weight: bold;
 		}
 	}
 }
@@ -327,6 +332,7 @@ nav{
 	tr{
 		td:last-child{
 			color:#FFB92F;
+			font-weight: bold;
 		}
 	}
 }
@@ -335,6 +341,7 @@ nav{
 	tr{
 		td:last-child{
 			color:#FF7739;
+			font-weight: bold;
 		}
 	}
 }
@@ -343,6 +350,7 @@ nav{
 	tr{
 		td:last-child{
 			color:#FF0500;
+			font-weight: bold;
 		}
 	}
 }
@@ -365,7 +373,7 @@ nav{
 .relleno{
 	width: 100%;
 	box-sizing: border-box;
-	background:#00223b;
+	background:#142e3f;
 	color: white; 
 	text-align: center;
 	padding: 5% 0;
@@ -384,7 +392,7 @@ nav{
 
 footer {
 	width: 100%;
-	background: #001321;	
+	background: #091722;	
 	font-family: $t-letra1;
 	color: white;
 	font-size: 12px;
